--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -107,8 +107,9 @@ header {
         }
 
         .cart-counter {
-          width: 28px;
-          height: 27px;
+          min-width: 28px;
+          height: 28px;
+          padding: 0 7px;
           border-radius: 14px;
           background-color: $header-bg;
           display: flex;
