--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,6 +2,16 @@ header {
   .top-bar {
     background-color: $header-topbar-bg;
 
+    .nav {
+      li:hover ul {
+        display: block;
+        position: absolute;
+        background-color: $header-topbar-bg;
+        border-top: 1px solid $primary;
+        border-bottom: 1px solid $primary;
+      }
+    }
+
     ul {
       list-style: none;
       margin: 0;
@@ -10,11 +20,14 @@ header {
       li {
         display: inline-block;
         line-height: 55px;
-
+        ul {
+          display: none;
+        }
         a {
           @extend %hover-trans;
           color: #ffffff;
           font-size: 13px;
+          display: inline-block;
 
           &:hover {
             color: $primary;
@@ -28,7 +41,7 @@ header {
       margin-right: 1.5rem;
 
       i {
-        margin-left: 5px
+        margin-left: 5px;
       }
     }
 
@@ -36,7 +49,7 @@ header {
       margin-left: 1.5rem;
 
       i {
-        margin-right: 5px
+        margin-right: 5px;
       }
     }
   }
@@ -53,7 +66,7 @@ header {
         margin: 0;
         font-size: 17px;
         line-height: 42px;
-        color: rgb(216,216,216);
+        color: rgb(216, 216, 216);
         font-weight: 500;
 
         i {
@@ -67,7 +80,6 @@ header {
     }
 
     .cart {
-
       .cart-box {
         display: inline-block;
         position: relative;
@@ -98,7 +110,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 14px;
-          color: rgb(224,227,237);
+          color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
           right: 0;
@@ -115,7 +127,7 @@ header {
   }
 
   .menu-bar {
-    box-shadow: 2px 3.464px 6px rgba(1,2,2,0.2);
+    box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
     background-color: #ffffff;
 
     .container > .row {
