--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -78,5 +78,29 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .price {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+
+      .old-price {
+        display: block;
+        padding: 5px;
+        font-size: 14px;
+        font-weight: 300;
+        color: #A5A5A5;
+        text-decoration: line-through;
+        text-decoration-color: #2a2a2a;
+        white-space: nowrap;
+      }
+
+      .btn-main-small.no-hover {
+        font-size: 16px;
+        font-weight: 500;
+        white-space: nowrap;
+      }
+    }
   }
 }
