Add 'hover-trans' extends for styles
Globaly setup hover trasition duration for button's & link's. Works with properties:
- color,
- background-color,
- border-color.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,8 @@
 @import "fontawesome/brands";
 @import "fontawesome/regular";
 
+@import "extends";
+
 @import "components/header";
 @import "components/footer";
 
