--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,6 +12,7 @@ header {
         line-height: 55px;
 
         a {
+          @extend %hover-trans;
           color: #ffffff;
           font-size: 13px;
 
@@ -73,6 +74,7 @@ header {
         color: #ffffff;
 
         .cart-icon {
+          @extend %hover-trans;
           background-color: $primary;
           width: 55px;
           height: 50px;
@@ -135,6 +137,7 @@ header {
           align-items: stretch;
 
           a {
+            @extend %hover-trans;
             color: $text-color;
             text-transform: uppercase;
             font-size: 12px;
