--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,6 +6,7 @@
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
+  border: none;
 
   &:not(.no-hover):hover {
     color: #ffffff !important;
