--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,54 +1,81 @@
-.post-box {
-  margin-bottom: 2rem;
+a {
   
-  .cover {
-    padding: 70% 25px 0 25px;
-    background: {
-      color: #f4f5f7;
-      size: cover;
-      position: center;
+  .post-box {
+    margin-bottom: 2rem;
+    
+    .cover {
+      padding: 70% 25px 0 25px;
+      background: {
+        color: #f4f5f7;
+        size: cover;
+        position: center;
+      }
+
+      .details {
+        padding: 15px 20px;
+        display: flex;
+        background-color: #ffffff;
+        font-size: 14px;
+        color: #000;
+
+        & > * {
+          flex: 1 1 auto;
+        }
+
+        .date {
+          text-align: left;
+        }
+
+        .comments {
+          text-align: right;
+        }
+      }
     }
 
-    .details {
-      padding: 15px 20px;
-      display: flex;
-      background-color: #ffffff;
-      font-size: 14px;
+    .post-info {
+      padding: 25px;
 
-      & > * {
-        flex: 1 1 auto;
+      h5 {
+        color: #000;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 1px;
       }
 
-      .date {
-        text-align: left;
+      p {
+        font-size: 14px;
+        line-height: 24px;
+        color: rgb(103,103,103);
+        text-align: justify;
       }
 
-      .comments {
-        text-align: right;
+      .more {
+        text-align: center;
+        padding-top: 30px;
+      }
+    }
+
+    
+    &:hover {
+      .post-info {
+        h5 {
+          color: $primary;
+        }
+
+        .more {
+          button {
+            background-color: $primary;
+
+            &:hover {
+              cursor: pointer;
+            }
+          }
+        }
       }
     }
   }
 
-  .post-info {
-    padding: 25px;
-
-    h5 {
-      color: $primary;
-      font-size: 16px;
-      line-height: 24px;
-      letter-spacing: 1px;
-    }
-
-    p {
-      font-size: 14px;
-      line-height: 24px;
-      color: rgb(103,103,103);
-      text-align: justify;
-    }
-
-    .more {
-      text-align: center;
-      padding-top: 30px;
-    }
+  &:hover {
+    text-decoration: none;    
   }
 }
