--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -217,6 +217,10 @@ header {
           font-size: 14px;
           position: relative;
           z-index: 1;
+
+          &:hover {
+            color: $primary;
+          }
         }
       }
 
