--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -35,4 +35,9 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
+
+  &.active {
+    background-color: #2a2a2a;
+    color: $primary;
+  }
 }
