Fix: meni items left margin

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -11,6 +11,9 @@ header {
       li {
         display: block;
         z-index: 1;
+        ul li a {
+          margin-left: 10px;
+        }
       }
     }
 
