--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -116,6 +116,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 14px;
+          line-height: 1;
           color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
