--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,7 +2,8 @@ footer {
   .footer-menu {
     background-color: $footer-bg;
     padding: 3rem 0;
-
+    text-align: center;
+    
     .menu-wrapper {
       h6 {
         color: #ffffff;
@@ -20,7 +21,7 @@ footer {
             @extend %hover-trans-text-underline;
             font-size: 14px;
             line-height: 30px;
-            color: rgb(169,169,169);
+            color: rgb(169, 169, 169);
 
             &:hover {
               color: #ffffff;
@@ -39,6 +40,10 @@ footer {
         display: inline-block;
       }
     }
+
+    img {
+      float: right;
+    }
   }
 
   .bottom-bar {
@@ -51,7 +56,7 @@ footer {
     .copyright {
       p {
         margin: 0;
-        color: rgb(169,169,169);
+        color: rgb(169, 169, 169);
         font-size: 14px;
         line-height: 26px;
       }
@@ -69,7 +74,7 @@ footer {
 
           a {
             @extend %hover-trans;
-            color: rgb(169,169,169);
+            color: rgb(169, 169, 169);
             text-decoration: none;
 
             &:hover {
@@ -81,3 +86,5 @@ footer {
     }
   }
 }
+
+ 
