--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,9 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+$screen-sm-min :765px;
+
+$screen-md-min :992px;
+
+$screen-lg-min :1200px;
