Add Current Menu Header Show (mobile media)

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -281,7 +281,7 @@ header {
   .menu-bar .container .align-items-center {
     .search-form {
       .category {
-        width: calc(100% + 10px);
+        width: 100%;
 
         select {
           width: 100%;
@@ -291,7 +291,7 @@ header {
         }
       }
       .search-field {
-        width: calc(100% - 55px);
+        width: calc(100% - 135px);
         right: 15px;
         position: absolute;
         z-index: 999;
