--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,6 +4,8 @@ $header-bg: #363636;
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
+$hot-deals-header-bg: #2a2a2a;
+
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
