--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -62,32 +62,8 @@
     }
   }
 
-  .dots {
-    ul {
-      margin: 0;
-      padding: 0 0 0 1rem;
-      list-style: none;
-      background-color: #ffffff;
-      transform: translateY(15px);
-
-      li {
-        display: inline-block;
-        margin-left: 0.5rem;
-
-        a {
-          @extend %hover-trans;
-          display: block;
-          width: 13px;
-          height: 13px;
-          border-radius: 6px;
-          background-color: #e1e1e1;
-
-          &.active,
-          &:hover {
-            background-color: $primary;
-          }
-        }
-      }
-    }
+  .dots ul {
+    background-color: #ffffff;
+    transform: translateY(15px);
   }
 }
