--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -26,11 +26,13 @@
 .btn-outline {
   @extend %hover-trans;
   display: inline-block;
-  padding: 5px 10px;
+  height: 34px;
+  min-width: 34px;
   border: 1px solid #2a2a2a;
   color: #2a2a2a;
   font-size: 13px;
-  line-height: 22px;
+  line-height: 32px;
+  text-align: center;
 
   &:hover {
     background-color: #2a2a2a;
