--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,7 +1,7 @@
 .product-box {
   background-color: #ffffff;
   border: 1px solid #e1e1e1;
-  margin-bottom: 2rem;
+  margin-bottom: 2rem; 
 
   .photo {
     position: relative;
@@ -29,7 +29,17 @@
     .buttons {
       display: flex;
       justify-content: space-between;
+      visibility: hidden;      
     }
+  }
+
+  &:hover {
+    .buttons {
+      visibility: visible;
+    }
+    .btn-price {
+      background-color: $primary;
+    }    
   }
 
   .content {
