--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -28,9 +28,13 @@
   color: #2a2a2a;
   font-size: 13px;
   line-height: 22px;
-
+  
   &:hover {
     background-color: #2a2a2a;
     color: #ffffff;
   }
+}
+
+.btn-outline:active {
+    background-color: #d58e32;
 }
