--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -83,18 +83,19 @@ header {
           font-size: 20px;
 
           i {
-            margin-right: 5px;
+            margin-right: 20px;
           }
         }
 
         .cart-counter {
-          width: 28px;
-          height: 27px;
-          border-radius: 14px;
+          width: 48px;
+          height: 25px;
+          border-radius: 15px;
+          padding-left: 10px;
           background-color: $header-bg;
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: flex-start;
           font-size: 14px;
           color: rgb(224,227,237);
           position: absolute;
