Update feature boxes to be links and have hover effects

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,3 +1,4 @@
+
 .feature-box {
   border: 1px solid #b6b6b6;
   text-align: center;
@@ -49,7 +50,7 @@
     }
   }
 
-  &.active {
+  &:hover {
     i {
       background-color: $primary;
       color: #ffffff;
@@ -60,4 +61,15 @@
       color: $primary;
     }
   }
+}
+
+
+// this is not working, but I cannot find any higher specificity selector overwriting this:
+.feature-link {
+  text-decoration: none;
+}
+
+// this is a workaround, alternatively I could use !important with class selector above
+#feature-link-1, #feature-link-2, #feature-link-3, #feature-link-4 {
+  text-decoration: none ;
 }
