Update "quick view" and "add to cart" buttons to show only on product box hover.

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -29,7 +29,13 @@
     .buttons {
       display: flex;
       justify-content: space-between;
+      visibility: hidden;
     }
+
+
+    }
+    &:hover .buttons {
+      visibility: visible;
   }
 
   .content {
