Update price box to change background color on product box hover

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -34,8 +34,15 @@
 
 
     }
-    &:hover .buttons {
+    &:hover {
+      
+      .buttons {
       visibility: visible;
+      }
+
+      .price .btn-main-small {
+        background-color: $primary;
+      }
   }
 
   .content {
