--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,11 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+%anim-text-color {
+	transition: color .25s;
+}
+
+%anim-bg-color {
+	transition: background-color .25s;
+}
