Options and hoover added to select

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -196,6 +196,10 @@ header {
           position: relative;
           z-index: 1;
         }
+
+        select:hover {
+          cursor: pointer;
+        }
       }
 
       .search-field {
