--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -94,7 +94,11 @@ header {
           background-color: $header-bg;
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: start;
+          padding-left: 8px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           font-size: 14px;
           color: rgb(224,227,237);
           position: absolute;
