Select on CSS list changed

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -186,15 +186,54 @@ header {
           z-index: 0;
         }
 
-        select {
-          -webkit-appearance: none;
+        .navigation {
           border: 0;
           background-color: transparent;
           outline: none;
-          padding: 5px 30px 5px 35px;
+          padding: 20px 6px 5px 15px;
           font-size: 14px;
           position: relative;
           z-index: 1;
+
+          ul {
+            font-size: 0;
+          }
+          li {
+            display: block;
+            font-size: 16px;
+          }
+
+          ul {
+            padding: 0;
+            text-align: center;
+          }
+
+          a {
+            padding: 10px 25px;
+            display: block;
+            text-decoration: none;
+            color: #636363;
+          }
+
+          li:hover {
+            color: black;
+            background-color: #d58e32;
+          }
+
+          li ul {
+            position: absolute;
+            display: none;
+          }
+
+          li li {
+            display: block;
+          }
+
+          li:hover ul {
+            display: block;
+            background-color: white;
+            width: 190px;
+          }
         }
       }
 
