Start with problem

--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -33,7 +33,7 @@
     padding: 25px;
 
     h5 {
-      color: $primary;
+      color: black;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -50,5 +50,14 @@
       text-align: center;
       padding-top: 30px;
     }
+  }
+
+  :hover {
+    cursor: pointer;
+      
+    }
+
+  .post-info:hover h5 {
+    color: $primary;
   }
 }
