--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,7 +1,7 @@
 .feature-box {
   border: 1px solid #b6b6b6;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 40px;  
 
   .icon {
     transform: translateY(-50%);
@@ -51,8 +51,7 @@
   
   &.active,
   &:hover {
-    i, 
-    a {
+    i, a{
       background-color: $primary;
       color: #ffffff;
       border-color: $primary;      
