Class active established and on buttons added

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -35,6 +35,8 @@
   }
 }
 
-.btn-outline:active {
-    background-color: #d58e32;
-}
+.active {
+    background-color: #2a2a2a;
+    color: #ffffff;
+  }
+
