--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+
 @import "variables";
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
@@ -21,4 +22,149 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+}
+.section--promotion {
+  margin-bottom: 2rem;
+  .container {
+    margin-top: 7px;
+    .col-5 {
+      padding: 0 10px;
+        .panel-bar {
+          background: black;
+          color: white;
+          margin-bottom: 0;
+          .row > * {
+            border-bottom: none;
+          }
+          .hot_deals {
+            h4 {
+              margin-left: 30px;
+              padding-top: 10px;
+            }
+          }
+          .col-auto {
+            margin-right: 0;
+            ul {
+              margin-top: -4px;
+              background: black;
+            }
+          }
+        }
+        .photo {
+          width: 94%;
+          height: 100%;
+          margin-left: 15px;
+        }
+        .buttons {
+          padding: 10px 130px;
+          margin-top: -200px;
+          .btn-main-small {
+            font-size: 18px;
+            background: black;
+            color: white;
+          }
+        }
+        .icons {
+          display: flex;
+          padding-top: 10px;
+          padding-left: 10px;
+          margin-top: -100px;
+          margin-left: 50px;
+          .col-3 {
+            max-width: 22%;
+            margin: 0 0 0 0;
+          .icon {
+            width: 80px;
+            height: 80px;
+            background: rgb(44, 43, 43);
+            color: white;
+            font-size: 18px;
+            text-align: center;
+            border-radius: 100%;
+            padding: 15px;
+            margin-left: -14px;
+            text-transform:uppercase;
+            line-height: 1.2em;
+          }
+        }
+      }
+    }
+  }
+  .section_product_box {
+    border: rgb(78, 75, 75);
+    .col-12 {
+      text-align: center;
+      .btn-main-small {
+        background: black;
+        color: white;
+        font-size: 20px;
+        font-weight: bold;
+        padding: 10px 1s0px;
+      }
+    }
+  }
+  .product-box {
+    .content{
+      margin-bottom: 5px;
+      margin-top: 15px;
+      h5 {
+        font-size: 20px;
+        padding-top: 5px;
+        font-weight: 600;
+        color: rgb(0, 0, 0);
+      }
+    }
+  }
+  .outlines :hover{
+    background: #d58e32;
+  }
+  .discount {
+    text-decoration: line-through;
+  }
+  .col-7 {
+    padding: 0;
+    .photo {
+      padding: 0 15px;
+      .photo_sofa {
+        width: 100%;
+        height: 528px;
+        margin-bottom: 0;
+      }
+    }
+  }
+  .indoor_furniture {
+    background: rgb(78, 75, 75);
+    height: 200px;
+    width: 100%;
+    color: white;
+    opacity: 0.6;
+    margin: -400px 15px 0 15px;
+    h6 {
+      margin-top: 30px;
+      padding-top: 20px;
+      text-align: center;
+      font-size: 55px;
+      p {
+        font-size: 25px;
+      }
+    }
+  }
+  .buttons{
+    text-align: center;
+    margin-top: -220px;
+  }
+  .btn-main-small {
+    background: white;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 10px;
+  }
+  .col-6 {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .fa{
+    padding: 0;
+  }
 }
