--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -2,11 +2,15 @@
   margin-bottom: 2rem;
   
   .cover {
-    padding: 70% 25px 0 25px;
-    background: {
+      background: {
       color: #f4f5f7;
       size: cover;
       position: center;
+    }
+
+    img {
+      width: 100%;
+      height: 250px;
     }
 
     .details {
