--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -4,8 +4,7 @@
   margin-bottom: 2rem; 
 
   .photo {
-    position: relative;
-    padding: 80% 10px 0 10px;
+    position: relative;    
     background: {
       color: #f4f5f7;
       size: contain;
@@ -14,6 +13,11 @@
     }
     overflow: hidden;
     align-items: flex-end;
+
+    img {
+      width: 100%;
+      height: 200px;     
+    }
 
     .sale {
       position: absolute;
@@ -27,6 +31,10 @@
     }
 
     .buttons {
+      top: 84%;
+      width: 100%;
+      margin: auto;
+      position: absolute;
       display: flex;
       justify-content: space-between;
       visibility: hidden;      
