--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -51,29 +51,47 @@ body {
           }
         }
         .image {
-          width: 100%;
+          width: 93.5%;
+          height: 330px;
           margin-left: 15px;
           opacity: 1;
           display: block;
-          height: auto;
           transition: .5s ease;
+          backface-visibility: hidden;
           backface-visibility: hidden;
         }
         .buttons {
-          padding: 10px 130px;
+          display: flex;
           margin-top: -200px;
+          margin-left: 5px;
+          transition: .5s ease;
+          opacity: 0;
+          position: absolute;
+          top: 100%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
           .btn-main-small {
             font-size: 18px;
             background: black;
             color: white;
           }
         }
+        .buttons :hover{
+          background: #d58e32;
+          border: 1px solid #d58e32;
+        }
         .icons {
           display: flex;
-          padding-top: 10px;
-          padding-left: 10px;
-          margin-top: -100px;
-          margin-left: 50px;
+          margin-top: 30px;
+          margin-left: 20px;
+          transition: .5s ease;
+          opacity: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
           .col-3 {
             max-width: 22%;
             margin: 0 0 0 0;
@@ -121,6 +139,7 @@ body {
   }
   .outlines :hover{
     background: #d58e32;
+    border: 1px solid #d58e32;
   }
   .discount {
     text-decoration: line-through;
@@ -162,13 +181,28 @@ body {
     color: #000;
     font-size: 20px;
     font-weight: bold;
-    padding: 10px 10px;
   }
-  .col-6 {
-    margin: 0 auto;
+  .button {
     text-align: center;
+    text-align: center;
+    margin-left: 0; 
+    .btn-main-small {
+      margin-right: 0;
+      background: black;
+      color: white;
+    }
   }
-  .fa{
-    padding: 0;
+  .button :hover{
+    background: #d58e32;
+    border: 1px solid #d58e32;
+  }
+  .photos:hover .image {
+    opacity: 0.6;
+  }
+  .photos:hover .buttons {
+    opacity: 1;
+  }
+  .photos:hover .icons {
+    opacity: 1;
   }
 }
