--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-@import "variables";
+  @import "variables";
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
@@ -21,4 +21,95 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+}
+p {
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-menu {
+    .container {
+        .col {
+          flex-basis: 20rem;
+          flex-grow: 1;
+          margin: 0 10px;
+          padding: 0 10px;
+        }
+      }
+    }
+  }
+
+@media screen and (max-width: 568px) {
+  footer {
+    .footer-menu {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      .container {
+        text-align: center;
+        font-size: 10px;
+        .row {
+          text-align: center;
+          .col {
+            flex-basis: 15rem;
+            flex-grow: 1;
+            margin: 0 10px;
+            padding: 0 10px;
+              h6 {
+                margin-top: 5px;
+                font-size: 1.5rem;
+              }
+              p {
+                font-size: 11px;
+              }
+              li a {
+                margin-top: 10px;
+                font-size: 0.9rem;
+                line-height: 1.2;
+              }
+            }
+          }
+        }
+      }
+    }
+    footer {
+      .bottom-bar {
+        .copyright{
+          p {
+            margin: 0;
+            color: darkgray;
+            font-size: 11px;
+            line-height: 26px;
+          }
+        }
+      }
+    }
+
+@media screen and (max-width: 320px) {
+  footer {
+    width: 102%;
+    .footer-menu {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      .container {
+        text-align: center;
+        padding-right: 0;
+        padding-left: 0;
+        .row {
+          flex-basis: auto;
+          display: inline-block;
+          text-align: center;
+            h6 {
+              margin-top: 5px;
+              font-size: 1.2rem;
+            }
+            li a {
+              margin-top: 10px;
+              font-size: 1rem;
+              line-height: 1.6;
+            }
+          }
+        }
+      }
+    }
+  }
 }
