--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -5,7 +5,7 @@
 
     .photo {
       position: relative;
-      padding: 0 10px 0 10px;
+      padding: 80% 10px 0 10px;
       background: {
         color: #f4f5f7;
         size: contain;
