--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,117 +24,90 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 .section--promotion {
+  margin-top: 10px;
   .panel-bar {
     background: black;
     color: white;
     margin-bottom: 0;
-  .hot_deals {
-    h4 {
+    .row > * {
+      border-bottom: none;
+    }
+    .hot_deals {
     margin-left: 30px;
     padding-top: 10px;
     }
-  }
-          .col-auto {
-            margin-right: 0;
-            ul {
-              margin-top: -4px;
-              background: black;
-            }
-          }
-        }
-        .image {
-          width: 93.5%;
-          height: 330px;
-          margin-left: 15px;
-          opacity: 1;
-          display: block;
-          transition: .5s ease;
-          backface-visibility: hidden;
-          backface-visibility: hidden;
-        }
-        .buttons {
-          display: flex;
-          margin-top: -200px;
-          margin-left: 5px;
-          transition: .5s ease;
-          opacity: 0;
-          position: absolute;
-          top: 100%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          .btn-main-small {
-            font-size: 18px;
-            background: black;
-            color: white;
-          }
-        }
-        .buttons :hover{
-          background: #d58e32;
-          border: 1px solid #d58e32;
-        }
-        .icons {
-          display: flex;
-          margin-top: 30px;
-          margin-left: 20px;
-          transition: .5s ease;
-          opacity: 0;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-          .col-3 {
-            max-width: 22%;
-            margin: 0 0 0 0;
-          .icon {
-            width: 80px;
-            height: 80px;
-            background: rgb(44, 43, 43);
-            color: white;
-            font-size: 18px;
-            text-align: center;
-            border-radius: 100%;
-            padding: 15px;
-            margin-left: -14px;
-            text-transform:uppercase;
-            line-height: 1.2em;
-          }
-        }
-      }
-    }
-  
-  .section_product_box {
-    border: rgb(78, 75, 75);
-    .col-12 {
-      text-align: center;
-      .btn-main-small {
+    .col-auto {
+      ul {
+        margin-top: -4px;
         background: black;
-        color: white;
-        font-size: 20px;
-        font-weight: bold;
-        padding: 10px 1s0px;
       }
+   }
+  }
+  .image {
+    width: 93.5%;
+    height: 330px;
+    margin-left: 15px;
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  .buttons {
+    display: flex;
+    margin-top: -200px;
+    margin-left: 5px;
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 25%;
+    .btn-main-small {
+      font-size: 18px;
+      background: black;
+      color: white;
     }
   }
-  .product-box {
-    .content{
-      margin-bottom: 5px;
-      margin-top: 15px;
-      h5 {
-        font-size: 20px;
-        padding-top: 5px;
-        font-weight: 600;
-        color: rgb(0, 0, 0);
-      }
-    }
+  .buttons :hover{
+    background: #d58e32;
+    border: 1px solid #d58e32;
   }
+  .icons {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 20px;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .icon {
+    width: 80px;
+    height: 80px;
+    background: rgb(44, 43, 43);
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 100%;
+    padding: 15px;
+    margin-left: -14px;
+    text-transform:uppercase;
+    line-height: 1.2em;
+  }
+
   .outlines :hover{
     background: #d58e32;
     border: 1px solid #d58e32;
   }
   .discount {
     text-decoration: line-through;
+    margin-left: 40px;
+  }
+  .price {
+    background: black;
+    color: white;
+    padding: 4px;
+    text-align: center;
   }
   .col-7 {
     padding: 0;
@@ -142,7 +115,7 @@ body {
       padding: 0 15px;
       .photo_sofa {
         width: 100%;
-        height: 528px;
+        height: 31.3rem;
         margin-bottom: 0;
       }
     }
@@ -152,39 +125,38 @@ body {
     height: 200px;
     width: 100%;
     color: white;
-    opacity: 0.6;
+    opacity: 0.5;
     margin: -400px 15px 0 15px;
-    h6 {
+    .saveup {
       margin-top: 30px;
       padding-top: 20px;
       text-align: center;
-      font-size: 55px;
-      p {
-        font-size: 25px;
-      }
     }
   }
-  .buttons{
+  .button{
     text-align: center;
     margin-top: -220px;
   }
   .btn-main-small {
     background: white;
-    color: #000;
+    color: black;
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
   }
-  .button {
+  .button_arrow {
+    display: flex;
     text-align: center;
     text-align: center;
     margin-left: 0; 
     .btn-main-small {
+      width: 100%;
       margin-right: 0;
       background: black;
       color: white;
     }
   }
-  .button :hover{
+  .button_arrow :hover{
     background: #d58e32;
     border: 1px solid #d58e32;
   }
@@ -196,4 +168,4 @@ body {
   }
   .photos:hover .icons {
     opacity: 1;
-  }
+  }}
