usunięte konflikty, poprawione pliki

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -40,6 +40,7 @@ body {
       ul {
         margin-top: -4px;
         background: black;
+        margin-left: 60px;
       }
    }
   }
@@ -50,7 +51,6 @@ body {
     opacity: 1;
     display: block;
     transition: .5s ease;
-    backface-visibility: hidden;
   }
   .buttons {
     display: flex;
