--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,4 @@
-  @import "variables";
+@import "variables";
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
@@ -22,92 +22,42 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-p {
-  color: white;
-}
 
-@media screen and (max-width: 768px) {
-  .col {
-    width: 50%;
-    flex-basis: 5rem;
-    flex-grow: 1;
-    margin: 0 10px;
-    padding: 0 10px;
+@media (min-width: 576px) and (max-width: 600px) {
+  .menu-wrapper {
+    margin: 5px 30px;
+    text-align: center;
   }
-  .row {
-    width: 50%;
-  }
-}
-
-/*@media screen and (max-width: 568px) {
-.footer-menu {
-      padding-top: 0.5rem;
-      padding-bottom: 0.5rem;
-      .container {
-        text-align: center;
-        font-size: 10px;
-        .row {
-          text-align: center;
-          .col {
-            width: 10%;
-            flex-basis: 15rem;
-            flex-grow: 1;
-            margin: 0 10px;
-            padding: 0 10px;
-              h6 {
-                margin-top: 5px;
-                font-size: 1.5rem;
-              }
-              p {
-                font-size: 11px;
-              }
-              li a {
-                margin-top: 10px;
-                font-size: 0.9rem;
-                line-height: 1.2;
-              }
-            }
-          }
-        }
-    footer {
-      .bottom-bar {
-        .copyright{
-          p {
-            margin: 0;
-            color: darkgray;
-            font-size: 11px;
-            line-height: 26px;
-          }
-        }
-      }
-    }*/
-
-/*@media screen and (max-width: 568px) {
-  footer {
-    width: 100%;
-    .footer-menu {
-      padding-top: 0.5rem;
-      padding-bottom: 0.5rem;
-      .container {
-        text-align: center;
-        padding-right: 0;
-        padding-left: 0;
-       .row {
-          flex-basis: auto;
-          display: inline-block;
-          text-align: center;
-            h6 {
-              margin-top: 5px;
-              font-size: 1.2rem;
-            }
-            li a {
-              margin-top: 10px;
-              font-size: 1rem;
-              line-height: 1.6;
-            }
-          }
-        }
-      }
+  footer .bottom-bar {
+    .copyright p {
+      font-size: 10px;
+      line-height: 15px;
+    }
+    .col {
+      font-size: 12px;
+      padding: 0;
+      margin: 0;
     }
   }
-*/
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .row {
+    display: block;
+  }
+  footer .footer-menu {
+    text-align: center;
+  }
+  footer .bottom-bar {
+    text-align: center;
+    .col {
+      float: left;
+    }
+    .copyright {
+      width: 50%;
+    }
+    .socialmedia {
+      width: 50%;
+    }
+  }
+}
