Add hover on product-box

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -3,6 +3,25 @@
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
 
+  &:hover {
+    .photo {
+      .buttons {
+        visibility: visible;
+      }
+    }
+
+    .actions {
+      .price {
+        .btn-main-small {
+          background-color: $primary;
+        }
+      } 
+      
+    }
+        
+  }
+  
+
   .photo {
     position: relative;
     padding: 80% 10px 0 10px;
@@ -28,6 +47,7 @@
 
     .buttons {
       display: flex;
+      visibility: hidden;
       justify-content: space-between;
     }
   }
