--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,7 +1,10 @@
 .post-box {
   margin-bottom: 2rem;
   
-  .cover {
+  .cover1 {background-image: url('../images/latest-blog/1.jpeg');}
+  .cover2 {background-image: url('../images/latest-blog/2.jpeg');}
+  .cover3 {background-image: url('../images/latest-blog/3.jpeg');}
+  [class^="cover"] {
     padding: 70% 25px 0 25px;
     background: {
       color: #f4f5f7;
