--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,9 +33,11 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
-  &[active] {
+  &.active {
     background-color: $primary;
     border-color: $primary;
     color: #ffffff;
   }
 }
+
+
