--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -2,18 +2,28 @@
   margin-bottom: 2rem;
   
   .cover {
-    padding: 70% 25px 0 25px;
+    padding-top: 70%;
     background: {
       color: #f4f5f7;
       size: cover;
       position: center;
     }
+    position: relative;
+
+    &--image {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+    }
 
     .details {
+      margin: 0 25px;
       padding: 15px 20px;
       display: flex;
       background-color: #ffffff;
       font-size: 14px;
+      position: relative;
 
       & > * {
         flex: 1 1 auto;
