--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -33,7 +33,7 @@
     padding: 25px;
 
     h5 {
-      color: $primary;
+      color: $text-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -49,6 +49,22 @@
     .more {
       text-align: center;
       padding-top: 30px;
+
+      a {
+        color: white;
+      }
+    }
+  }
+  
+  &:hover {
+    cursor: pointer;
+
+    h5 {
+      color: $primary;
+    }
+
+    .btn-main {
+      background-color: #d58e32;
     }
   }
 }
