--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -71,6 +71,7 @@ header {
         display: inline-block;
         position: relative;
         color: #ffffff;
+        margin-right: 15px;
 
         .cart-icon {
           background-color: $primary;
@@ -81,20 +82,20 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 20px;
-
+          margin-right: 10px;
           i {
             margin-right: 5px;
           }
         }
 
         .cart-counter {
-          width: 28px;
+          width: 45px;
           height: 27px;
           border-radius: 14px;
           background-color: $header-bg;
           display: flex;
           align-items: center;
-          justify-content: center;
+          padding-left: 5px;
           font-size: 14px;
           color: rgb(224,227,237);
           position: absolute;
