Add old price on cards with strikethrough style

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -78,5 +78,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .price {
+      div {
+        display: inline;
+      }
+      
+      .oldprice {
+        font-size: 12px;
+        text-decoration: line-through;
+      }
+    }
   }
 }
