Fix hover & active in feature-box

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -49,11 +49,15 @@
     }
   }
 
-  &.active {
+  &:active,
+  &:hover {
     i {
       background-color: $primary;
       color: #ffffff;
       border-color: $primary;
+    }
+    a {
+      text-decoration: none;
     }
 
     .content {
