fix bug (WDP181101-5)

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,4 +33,16 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
+
+  &:active {
+    background-color: $primary;
+    color: #ffffff;
+    border: 1px solid $primary;
+  }
+}
+
+.active {
+  background-color: $primary;
+  color: #ffffff;
+  border: 1px solid $primary;
 }
