--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -3,32 +3,32 @@
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
   
-  .photo1 {
+  .bg1 {
     background-image: url('../images/new-furniture/1.jpg');
   }
-  .photo2 {
+  .bg2 {
     background-image: url('../images/new-furniture/2.jpeg');
   }
-  .photo3 {
+  .bg3 {
     background-image: url('../images/new-furniture/3.jpg');
   }
-  .photo4 {
+  .bg4 {
     background-image: url('../images/new-furniture/4.jpeg');
   }
-  .photo5 {
+  .bg5 {
     background-image: url('../images/new-furniture/5.jpeg');
   }
-  .photo6 {
+  .bg6 {
     background-image: url('../images/new-furniture/6.jpg');
   }
-  .photo7 {
+  .bg7 {
     background-image: url('../images/new-furniture/7.jpg');
   }
-  .photo8 {
+  .bg8 {
     background-image: url('../images/new-furniture/8.jpeg');
   }
   
-  [class^="photo"] {
+  .photo {
     position: relative;
     padding: 80% 10px 0 10px;
     background: {
