Create loop for classes array and start work on event listener for section

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -73,6 +73,10 @@
         &.full {
           @extend .fas;
         }
+        &.active {
+          @extend .fas;
+          color: $primary;
+        }
       }
     }
   }
