WDP181101-5 add extend css

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -35,9 +35,7 @@
   }
 
   &:active {
-    background-color: $primary;
-    color: #ffffff;
-    border: 1px solid $primary;
+    @extend .active;
   }
 }
 
